added missing tags
added missing tags

--- a/index.html
+++ b/index.html
@@ -17,23 +17,27 @@
 
     <hr>
 
-    <form>
-        <label for="searchbar">Search within article: </label>
-        <input type="text" id="searchbar" placeholder="Enter keyword...">
-        <button type="submit">Search</button>
-    </form>
+    <search>
+        <form>
+            <label for="searchbar">Search within article: </label>
+            <input type="text" id="searchbar" placeholder="Enter keyword...">
+            <button type="submit">Search</button>
+        </form>
+    </search>
 
     <section>
-        <h2>Abstract</h2>
-        <p>
-            Recent advances in quantum caffeination theory have revealed unexpected correlations between entangled coffee
-            molecules and workplace productivity metrics. This study demonstrates that <abbr>QEC</abbr> particles exhibit non-local effects
-            on human consciousness, resulting in a <strong>47.3% improvement</strong> in task completion rates. Using a double-blind,
-            placebo-controlled methodology with <i>n</i> = 2,847 participants, we observed statistically significant 
-            (<i>p</i> &lt; 0.001) enhancements in cognitive function following consumption of 
-            quantum-entangled espresso. These findings suggest potential applications in corporate efficiency optimization and
-            may explain the universe's apparent preference for morning meetings.
-        </p>
+        <hgroup>
+            <h2>Abstract</h2>
+            <p>
+                Recent advances in quantum caffeination theory have revealed unexpected correlations between entangled coffee
+                molecules and workplace productivity metrics. This study demonstrates that <abbr>QEC</abbr> particles exhibit non-local effects
+                on human consciousness, resulting in a <strong>47.3% improvement</strong> in task completion rates. Using a double-blind,
+                placebo-controlled methodology with <em>n</em> = 2,847 participants, we observed statistically significant 
+                (<em>p</em> &lt; 0.001) enhancements in cognitive function following consumption of 
+                quantum-entangled espresso. These findings suggest potential applications in corporate efficiency optimization and
+                may explain the universe's apparent preference for morning meetings.
+            </p>
+        </hgroup>
     </section>
 
     <aside>
@@ -48,12 +52,14 @@
     </aside>
 
     <section>
-        <h2>1. Introduction</h2>
-        <p>
-            The relationship between caffeine consumption and productivity has been documented since the discovery of coffee in
-            850 CE <cite>[1]</cite>. However, traditional models fail to explain the <i>Afternoon Paradox</i> — the phenomenon whereby productivity
-            decreases inversely with coffee consumption after 2:00 PM local time.
-        </p>
+        <hgroup>
+            <h2>1. Introduction</h2>
+            <p>
+                The relationship between caffeine consumption and productivity has been documented since the discovery of coffee in
+                850 CE <cite>[1]</cite>. However, traditional models fail to explain the <dfn>Afternoon Paradox</dfn> — the phenomenon whereby productivity
+                decreases inversely with coffee consumption after 2:00 PM local time.
+            </p>
+        </hgroup>
 
         <blockquote cite="https://example.org/allais1893">
             <p>“Coffee is a beverage that puts one to sleep when not drank.”</p>
@@ -82,8 +88,10 @@
             <li>Immediate consumption within the decoherence window (τ &lt; 5 minutes)</li>
         </ol>
 
-        <h3>2.2 Experimental Design</h3>
-        <p>Participants (<i>n</i> = 2,847) were randomly assigned to three groups:</p>
+        <hgroup>
+            <h3>2.2 Experimental Design</h3>
+            <p>Participants (<em>n</em> = 2,847) were randomly assigned to three groups:</p>
+        </hgroup>
 
         <dl>
             <dt>Control Group (CG)</dt>
@@ -104,7 +112,7 @@
             <figure>
                 <figcaption><strong>Example replicate command (experimental automation):</strong></figcaption>
                 <pre><code>./qed_control --mode entangle --temp 77K --pressure 1.21GPa --duration 00:04:30 --output run_2025-06-12.json</code></pre>
-            <p>Use Ctrl + C to cancel in the terminal if you need to abort the run.</p>
+            <p>Use <kbd>Ctrl</kbd> + <kbd>C</kbd> to cancel in the terminal if you need to abort the run.</p>
             </figure>
         </details>
 
@@ -118,9 +126,11 @@
     </section>
 
     <section>
-        <h2>3. Results</h2>
-        <h3>3.1 Productivity Metrics</h3>
-        <p>Analysis revealed significant improvements across all measured parameters:</p>
+        <hgroup>
+            <h2>3. Results</h2>
+            <h3>3.1 Productivity Metrics</h3>
+            <p>Analysis revealed significant improvements across all measured parameters:</p>
+        </hgroup>
 
         <figure>
             <table>
@@ -167,8 +177,10 @@
             </table>
         </figure>
 
-        <h3>3.2 Temporal Analysis</h3>
-        <p>The quantum entanglement effect showed remarkable persistence throughout the workday. Peak productivity occurred at 10:47 AM, with sustained effects until 4:23 PM.</p>
+        <hgroup>
+            <h3>3.2 Temporal Analysis</h3>
+            <p>The quantum entanglement effect showed remarkable persistence throughout the workday. Peak productivity occurred at 10:47 AM, with sustained effects until 4:23 PM.</p>
+        </hgroup>
 
         <figure>
             <svg width="400" height="200">
@@ -191,24 +203,30 @@
     </section>
 
     <section>
-        <h2>4. Discussion</h2>
-        <p>
-            Our findings support the hypothesis that quantum entanglement can be maintained in biological systems at room temperature,
-            contrary to conventional wisdom. The mechanism appears to involve resonance between caffeine molecules and neural microtubules.
-        </p>
+        <hgroup>
+            <h2>4. Discussion</h2>
+            <p>
+                Our findings support the hypothesis that quantum entanglement can be maintained in biological systems at room temperature,
+                contrary to conventional wisdom. The mechanism appears to involve resonance between caffeine molecules and neural microtubules.
+            </p>
+        </hgroup>
 
         <aside>
-            <h4>Note on Safety</h4>
-            <p>
-                No adverse effects were observed during the study period. However, three participants reported experiencing
-                “temporal displacement sensations” which resolved spontaneously.
-            </p>
+            <hgroup>
+                <h4>Note on Safety</h4>
+                <p>
+                   No adverse effects were observed during the study period. However, three participants reported experiencing
+                   “temporal displacement sensations” which resolved spontaneously.
+                </p>
+            </hgroup>
         </aside>
     </section>
 
     <section>
-        <h2>5. Conclusions</h2>
-        <p>This study demonstrates that quantum-entangled coffee represents a viable approach to enhancing workplace productivity. Key findings include:</p>
+        <hgroup>
+            <h2>5. Conclusions</h2>
+            <p>This study demonstrates that quantum-entangled coffee represents a viable approach to enhancing workplace productivity. Key findings include:</p>
+        </hgroup>
         <ul>
             <li>Quantum coherence can be maintained in coffee for up to 5 minutes post-brewing.</li>
             <li>Entangled caffeine molecules produce measurable improvements in cognitive function.</li>
@@ -232,12 +250,18 @@
                 <legend>Quick Feedback</legend>
                     <label for="favcoffee">Favorite Coffee: </label>
                     <select id="favcoffee">
+                    <optgroup label="Common-Coffees">
                         <option>Machiatto</option>
                         <option>Pumpkin Spice Latte</option>
                         <option>Americano</option> 
+                    </optgroup>
+
                         <hr>
+
+                    <optgroup label="Rare-Coffees">
                         <option>Black Ivory</option>
                         <option>Hawaiian Kona</option>
+                    </optgroup>
                     </select>
 
                     <br><br/>
