erased example cite

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </p>
         </hgroup>
 
-        <blockquote cite="https://example.org/allais1893">
+        <blockquote>
             <p>“Coffee is a beverage that puts one to sleep when not drank.”</p>
             <cite>— Alphonse Allais, 1893</cite>
         </blockquote>
